output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1572.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1572.py", line 167
    /* pos[0] == 9 */ duration_for(9, True))))))))))
    ^
SyntaxError: invalid syntax
